# plonky2-bls12-381-pairing

./: Cargo.toml
src/: final_exponentiation.rs  final_exponentiation_helpers.rs  lib.rs  miller_loop.rs  miller_loop_target.rs  pairing.rs
src/curves/: g1.rs  g1_curve_target.rs  g2.rs  g2_curve_target.rs  mod.rs
src/fields/: fq12_target.rs  fq2_target.rs  fq6_target.rs  fq_target.rs  helpers.rs  mod.rs  my_fq6.rs
src/fields_as_trees/: fq12_target_tree.rs  fq2_target_tree.rs  fq6_target_tree.rs  g1_curve.rs  g2_curve.rs  miller_loop.rs  mod.rs  noir_miller_loop.rs
src/miller_loop_native/: miller_loop_native_impl.rs  mod.rs
src/native/: fin_exp_helpers.rs  final_exponentiation.rs  miller_loop.rs  mod.rs  pairing.rs
src/utils/: constants.rs  helpers.rs  mod.rs
