[package]
name = "plonky2-bls12-381-pairing"
edition = "2021"
version = "0.1.0"

[dependencies]
plonky2_ecdsa = { git = "https://github.com/0xPolygonZero/plonky2-ecdsa.git", default-features = false }
plonky2_u32 = { git = "https://github.com/0xPolygonZero/plonky2-u32.git", default-features = false }
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2.git", default-features = false }
anyhow = "1.0.71"
ark-bls12-381 = "0.4.0"
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-std = "0.4.0"
itertools = "0.12.1"
rand = "0.8.5"
num-bigint = "0.4.4"
num = "0.4.0"
num-traits = "0.2"
subtle = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
